Jacksum 3.0.1-not-yet-released

- added minor features

    - 'jacksum -h parameters', 'jacksum -h options', and 'jacksum -h algorithms'
      show the corresponding section entirely
    - added aliases crc32_jamcrc and crc-32_jamcrc for crc32_ubi
    - added KeccakSum compatibility info to the help file

- bugs fixed

    - fixed: compat files bsd, linux, and openssl should use line separator \n on Microsoft Windows,
      otherwise md5sum, sha1sum, etc. on GNU/Linux cannot read Jacksum's output
    - fixed: typo in compat files linux and openssl which results in wrong stdin names
    - fixed: speed rank info is calculated wrongly (check with `jacksum -a all --list --info`)
    - fixed: `jacksum -h examples` shows only the first 3 example sections, it should show all example sections
    - fixed: format "#HASH{0,<encoding>}" and  -F "#CHECKSUM{i,<encoding>}" don't work if the user
      has selected one algorithm only
    - fixed: crc32c can be used normal, but it is missing in the --list output
    - fixed: some typos in the help file
    - fixed: remove the lab-remnant hex-camelcase from the code


Jacksum 3.0.0, Sep 4, 2021

- Algorithms

  new algorithms
    - 408 new algorithms (including different sizes) have been added
    - SHA-3 winner of the NIS SHA-3 competition (FIPS 202)
      * SHA3-224, SHA3-256, SHA3-384, SHA3-512 provided by the OpenJDK 9+ resp.
        by bouncycastle (bc) as an alternative implementation or if Java < 9 is being used
	  * SHAKE128, SHAKE256 (provided by bc)
    - completion of the SHA-2 family definitions (FIS 180-4):
	  * SHA-512/224, SHA-512/256 provided by the OpenJDK 9+ resp.
  	    by bc as an alternative implementation or if Java < 9 is being used
    - national standards
	  * Kupyna256, Kupyna384, Kupyna512 (Ukraine standard)
	  * LSH (Korean Standard): LSH-256-224, LSH-256-256, LSH-512-224, LSH-512-256, and
        LSH-512-384, LSH-512-512
	  * SM3 (Chinese standard, provided by bc)